--- a/result.html
+++ b/result.html
@@ -20,20 +20,20 @@
 
         <p> 가장 마음에 드는 직업을 하나만 선택하세요!</p>
         <form  method="get" action="이동할 페이지.">
-           <input type="checkbox" name='job' onclick='checkOnlyOne(this)' check=true;> <label>a </label> <br>
-           <input type="checkbox" name='job' onclick='checkOnlyOne(this)' check=true;> <label>b </label> <br>
-           <input type="checkbox" name='job' onclick='checkOnlyOne(this)' check=true;> <label>c </label> <br>
-           <input type="checkbox" name='job' onclick='checkOnlyOne(this)' check=true;> <label>d </label> <br>
-           <input type="checkbox" name='job' onclick='checkOnlyOne(this)' check=true;> <label>e </label> <br> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>a </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>b </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>c </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>d </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>e </label> <br> <br>
        </form>
        <p>
         <input
           class="NextButton"
           type="button"
           value="Next"
-          onclick='if(check != true){alert("please select the option");}else{location.href="statistics.html"}'
+          onclick='if(check != true){alert("please select the option");}else{location.href="statistics.html?"+mbti}'
         />
       </p>
-        <script src="app.js"></script>
+        <script src="result.js"></script>
     </body>
 </html>
