--- a/statistics.html
+++ b/statistics.html
@@ -8,8 +8,8 @@
   <body>
     <div>
       <p>
-        <span>ESFP</span>인 사람들이 <br />선호하는 직업의 순위는 <br />아래와
-        같습니다.
+        <span id="mbti">ESFP</span> 사람들이 <br />선호하는 직업의 순위는
+        <br />아래와 같습니다.
       </p>
     </div>
     <br /><br />
@@ -20,13 +20,13 @@
       <th>Value</th>
       <tr>
         <td>1</td>
-        <td>의사</td>
-        <td>50%</td>
+        <td id="job1">의사</td>
+        <td id="%1">50%</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>배우</td>
-        <td>30%</td>
+        <td id="job2">배우</td>
+        <td id="%2">30%</td>
       </tr>
     </table>
 
@@ -34,5 +34,6 @@
     <div id="button">
       <a href="#" class="button">링크 공유하기</a>
     </div>
+    <script src="statistics.js"></script>
   </body>
 </html>
