--- a/result.html
+++ b/result.html
@@ -9,23 +9,31 @@
         <title>Mbti</title>
     </head>
     <body>
+        <script> var check = false; </script>
         <h2 id="sub">생기발랄한 장난꾸러기</h1>
         <h1 id="mbti" > ESFP </h1> 
         <p id = "explain">
-            <a> ESFP </a>  유형은 상식을 중요시하며 다른 사람들과 상호작용하고
+            상식을 중요시하며 다른 사람들과 상호작용하고
             자기 자신을 표현하는 일에서 훌륭한 성과를 발휘할 수 있다고 합니다. 
             해당 유형의 추천 직업은 아래와 같습니다.
         </p>
 
-        <p> 가장 마음에 드는 직업을 하나만! 선택하세요!</p>
+        <p> 가장 마음에 드는 직업을 하나만 선택하세요!</p>
         <form  method="get" action="이동할 페이지.">
-           <input type="checkbox" name='job'> <label>a </label> 
-           <input type="checkbox" name='job'> <label>b </label> 
-           <input type="checkbox" name='job'> <label>c </label> 
-           <input type="checkbox" name='job'> <label>d </label> 
-           <input type="checkbox" name='job'> <label>e </label> 
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>a </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>b </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>c </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>d </label> <br>
+           <input type="checkbox" name='job' onclick='checkOnlyOne(this); check=true;'> <label>e </label> <br> <br>
        </form>
-        <div id="next"><input type="button" value = " next> "> </div>
-        <script src="js/app.js"></script>
+       <p>
+        <input
+          class="NextButton"
+          type="button"
+          value="Next"
+          onclick='if(check != true){alert("please select the option");}else{location.href="statistics.html?"+mbti}'
+        />
+      </p>
+        <script src="result.js"></script>
     </body>
 </html>
