--- a/Seolmoon.html
+++ b/Seolmoon.html
@@ -18,15 +18,15 @@
         <div class="top_box">
             <p>MBTI별 추천 직업</p>
         </div>
-        <div class="question_box"> Q1. 오늘은 일요일! 어제 늦게까지 공부하느라 피곤한 상태지만 여느때처럼 아침에 알람이 울리고 있습니다. </div>
+        <div class="question_box"> Q1. 토요일 아침에 일어난 당신! 영화를 보려고 한다. 어떤 영화?</div>
 
             <form>
                 <div class="answer_box">
                     <script>
                         var check = false;
                     </script>
-                        <input class="answer" type="button" value="A1. 피곤하지만 알람을 끄고 일어난다" onclick='localStorage.setItem("question1", 1);check = true;'>
-                        <input class="answer" type = "button" value="A2. 알람을 무시하고 다시 잔다" onclick='localStorage.setItem("question1", 2);check = true;'>
+                        <input class="answer" type="button" value="A1. 우주 판타지를 담은 로맨스 영화 " onclick='localStorage.setItem("question1", 1);check = true;'>
+                        <input class="answer" type = "button" value="A2. 일상의 오맨스를 담은 영화 " onclick='localStorage.setItem("question1", 2);check = true;'>
                     <div class="button_box">
                         <input class="next_button" type="button" value="Next" onclick='if(check != true){alert("please select the option");}else{location.href="Seolmoon2.html"}'>
                     </div>
