--- a/Seolmoon10.html
+++ b/Seolmoon10.html
@@ -28,6 +28,7 @@
                 </script>
                     <input class="answer" type="button" value="A1. 많이 피곤하겠다 준비는 잘 했어??" onclick='localStorage.setItem("question10", 1);check = true;'>
                     <input class="answer" type = "button" value="A2. 오 드라이 샴푸 어때 좋아??" onclick='localStorage.setItem("question10", 2);check = true;'>
+                    <script src="./Seolmoon.js"></script>
                 <div class="button_box">
                     <input class="prev_button" type="button" value="Prev" onclick='if(check != true){alert("please select the option");}else{location.href=`./Seolmoon${page - 1}.html`}'>
                     <input class="next_button" type="button" value="Next" onclick='if(check != true){alert("please select the option");}else{location.href=`Seolmoon${page + 1}.html`}'>
