--- a/Seolmoon12.html
+++ b/Seolmoon12.html
@@ -28,6 +28,7 @@
                 </script>
                     <input class="answer" type="button" value="A1. 대학부터 가고 나서 생각해볼래" onclick='localStorage.setItem("question12", 1);check = true;'>
                     <input class="answer" type = "button" value="A2. 나는 무슨 색으로 염색 하고 해외 여행도 할거야" onclick='localStorage.setItem("question12", 2);check = true;'>
+                    <script src="./Seolmoon.js"></script>
                 <div class="button_box">
                     <input class="prev_button" type="button" value="Prev" onclick='if(check != true){alert("please select the option");}else{location.href=`./Seolmoon${page - 1}.html`}'>
                     <input class="next_button" type="button" value="Next" onclick='if(check != true){alert("please select the option");}else{location.href="process.html"}'>
