--- a/Seolmoon.html
+++ b/Seolmoon.html
@@ -25,12 +25,13 @@
                     <script>
                         var check = false;
                     </script>
-                        <input class="answer" type="button" value="A1. 우주 판타지를 담은 로맨스 영화 " onclick='localStorage.setItem("question1", 1);check = true;'>
-                        <input class="answer" type = "button" value="A2. 일상의 오맨스를 담은 영화 " onclick='localStorage.setItem("question1", 2);check = true;'>
-                    <div class="button_box">
+                        <input class="answer" type="button" value="A1. 우주 판타지를 담은 로맨스 영화" onclick='localStorage.setItem("question1", 1);check = true;'> 
+                        <input class="answer" type = "button" value="A2. 일상의 로맨스를 담은 영화" onclick='localStorage.setItem("question1", 2);check = true;'>
+                        <script src="./Seolmoon.js"></script>
+                    <div class="button_box1">
                         <input class="next_button" type="button" value="Next" onclick='if(check != true){alert("please select the option");}else{location.href="Seolmoon2.html"}'>
                     </div>
                 </div>
             </form>
-    </div>
+        </div>
 </body>
