--- a/Seolmoon11.html
+++ b/Seolmoon11.html
@@ -28,6 +28,7 @@
                 </script>
                     <input class="answer" type="button" value="A1. 너무 떨린다 잘 할수 있을까? 하고 대본을 달달 외운다" onclick='localStorage.setItem("question11", 1);check = true;'>
                     <input class="answer" type = "button" value="A2. 난 자신있어! 흐름만 암기하고 자연스럽게 발표하자" onclick='localStorage.setItem("question11", 2);check = true;'>
+                    <script src="./Seolmoon.js"></script>
                 <div class="button_box">
                     <input class="prev_button" type="button" value="Prev" onclick='if(check != true){alert("please select the option");}else{location.href=`./Seolmoon${page - 1}.html`}'>
                     <input class="next_button" type="button" value="Next" onclick='if(check != true){alert("please select the option");}else{location.href=`Seolmoon${page + 1}.html`}'>
