--- a/Seolmoon8.html
+++ b/Seolmoon8.html
@@ -28,6 +28,7 @@
                 </script>
                     <input class="answer" type="button" value="A1. 갑자기 외계인이 침략하면 어떡하지 라는 상상을 합니다." onclick='localStorage.setItem("question8", 1);check = true;'>
                     <input class="answer" type = "button" value="A2. 피곤하니까 빨리 잘 준비를 합니다." onclick='localStorage.setItem("question8", 2);check = true;'>
+                    <script src="./Seolmoon.js"></script>
                 <div class="button_box">
                     <input class="prev_button" type="button" value="Prev" onclick='if(check != true){alert("please select the option");}else{location.href=`./Seolmoon${page - 1}.html`}'>
                     <input class="next_button" type="button" value="Next" onclick='if(check != true){alert("please select the option");}else{location.href=`Seolmoon${page + 1}.html`}'>
