--- a/statistics.html
+++ b/statistics.html
@@ -1,46 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-    <title>STATISTICS</title>
-    <meta charset="utf-8"> 
-    <link rel="stylesheet" href="statistics_style.css">
-</head>
-<body>
-    <div>
-        <p>30%의 <span>ESFP</span>
-            가 <br>선호하는 직업의 순위는 <br>아래와 같습니다. </p>
-    </div>
-    <br><br>
+	<head>
+		<title>STATISTICS</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
+			rel="stylesheet"
+		/>
+		<meta charset="utf-8" />
+		<link rel="stylesheet" href="statistics_style.css" />
+	</head>
+	<body>
+		<div>
+			<p>
+				<span id="mbti">ESFP</span> 사람들이 <br />선호하는 직업의
+				순위는 <br />아래와 같습니다.
+			</p>
+		</div>
+		<br />
+		<table>
+			<th>NO.</th>
+			<th>Name</th>
+			<th>Value</th>
+			<tr>
+				<td>1</td>
+				<td id="job1">의사</td>
+				<td id="%1">50%</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td id="job2">배우</td>
+				<td id="%2">30%</td>
+			</tr>
+		</table>
 
-    <table>
-        <th>NO.</th>
-        <th>Name</th>
-        <th>Value</th>
-        <tr>
-            <td>1</td>
-            <td>의사</td>
-            <td>50%</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>배우</td>
-            <td>30%</td>
-        </tr>
-	<tr>
-            <td>2</td>
-            <td>배우</td>
-            <td>30%</td>
-        </tr>
-	<tr>
-            <td>2</td>
-            <td>배우</td>
-            <td>30%</td>
-        </tr>
-    </table>
-
-    <br><br><br><br><br><br>
-    <div id="button">
-        <a href="#" class="button">링크 공유하기</a>
-    </div>
-</body>
+		<br /><br /><br /><br /><br /><br />
+		<div id="button">
+			<a href="#" class="button" onclick="copy()">링크 공유하기</a>
+		</div>
+		<script src="statistics.js"></script>
+	</body>
 </html>
