--- a/start/start.html
+++ b/start/start.html
@@ -23,7 +23,7 @@
       </center>
     </div>
     <div id="button">
-      <a href="./../Seolmoon.html" class="button">START</a>
+      <a href="./../Seolmoon1.html" class="button">START</a>
     </div>
     <img src="2.jpeg" />
   </body>
