--- a/Seolmoon4.html
+++ b/Seolmoon4.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q4</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
@@ -29,7 +30,7 @@
                     <input class="answer" type="button" value="A1. 집에서 넷플릭스를 보고 맛있는 디저트를 시켜서 혼자만의 시간을 보낸다" onclick='localStorage.setItem("question4", 1);check = true;'>
                     <input class="answer" type = "button" value="A2. 친구들 만나서 카페나 가야지~! 하고 친구들을 불러서 나간다" onclick='localStorage.setItem("question4", 2);check = true;'>
                     <script src="./Seolmoon.js"></script>
-                    <div class="button_box">
+                <div class="button_box">
                     <input class="prev_button" type="button" value="Prev" onclick='if(check != true){alert("please select the option");}else{location.href=`./Seolmoon${page - 1}.html`}'>
                     <input class="next_button" type="button" value="Next" onclick='if(check != true){alert("please select the option");}else{location.href=`Seolmoon${page + 1}.html`}'>
                 </div>
